==> Arielmmm-1/ArkRace2026/Embedded Team/临时/NRF24L01.c <==
#include "stm32f4xx_hal.h"
#include "NRF24L01_Define.h"
#include "NRF24L01.h"
#define NRF24L01_TX_PACKET_WIDTH		32
#define NRF24L01_RX_PACKET_WIDTH		32

void NRF24L01_W_CE(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_3, (GPIO_PinState)BitValue);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, (GPIO_PinState)BitValue);
}

void NRF24L01_W_SCK(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, (GPIO_PinState)BitValue);
}

void NRF24L01_W_MOSI(uint8_t BitValue)
{
    HAL_GPIO_WritePin(GPIOA, GPIO_PIN_6, (GPIO_PinState)BitValue);
}

uint8_t NRF24L01_R_MISO(void)
{
    return HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_7);
}

void NRF24L01_GPIO_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure = {0};
    __HAL_RCC_GPIOA_CLK_ENABLE();

    // PA3 CE, PA4 CSN, PA5 SCK, PA6 MOSI 输出
    GPIO_InitStructure.Pin = GPIO_PIN_3 | GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_6;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    // PA7 MISO 上拉输入
    GPIO_InitStructure.Pin = GPIO_PIN_7;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = GPIO_PULLUP;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    NRF24L01_W_CE(0);
    NRF24L01_W_CSN(1);
    NRF24L01_W_SCK(0);
}
